--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,9 @@ language: python
 python:
     - "2.6"
     - "2.7"
-install: pip install -r requirements.txt --use-mirrors
+install:
+    - pip install -r requirements.txt --use-mirrors
+    - pip install -r requirements.test.txt --use-mirrors
 script:
     - python -m vip.main --version
     - nosetests
