--- a/.travis.yml
+++ b/.travis.yml
@@ -2,9 +2,10 @@ language: python
 python:
     - "2.6"
     - "2.7"
-install:
+install: 
     - pip install -r requirements.txt --use-mirrors
-    - pip install -r requirements.test.txt --use-mirrors
+    - pip install -e .
 script:
     - python -m vip.main --version
+    - pep8 vip
     - nosetests
