--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,7 @@ python:
     - "2.6"
     - "2.7"
 install: 
+    - pip install pep8
     - pip install -r requirements.txt --use-mirrors
     - pip install -e .
 script:
