--- a/.travis.yml
+++ b/.travis.yml
@@ -2,10 +2,9 @@ language: python
 python:
     - "2.6"
     - "2.7"
-install: 
-    - pip install pep8
+install:
     - pip install -r requirements.txt --use-mirrors
-    - pip install -e .
+    - pip install -r dev-requirements.txt --use-mirrors
 script:
     - python -m vip.main --version
     - pep8 vip
