--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,10 @@ language: python
 python:
     - "2.6"
     - "2.7"
+    - "3.2"
+matrix:
+    allowed_failured:
+        - python: "3.2"
 install:
     - pip install -r requirements.txt --use-mirrors
     - pip install -r dev-requirements.txt --use-mirrors
