--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ python:
     - "2.7"
     - "3.2"
 matrix:
-    allowed_failured:
+    allow_failures:
         - python: "3.2"
 install:
     - pip install -r requirements.txt --use-mirrors
