--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,7 @@ matrix:
 install:
     - pip install -r requirements.txt --use-mirrors
     - pip install -r dev-requirements.txt --use-mirrors
+    - if [[ $TRAVIS_PYTHON_VERSION == '2.6' ]]; then pip install --use-mirrors unittest2; fi
 script:
     - python -m vip.main --version
     - pep8 vip
