--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,9 @@ matrix:
 install:
     - pip install -r requirements.txt --use-mirrors
     - pip install -r dev-requirements.txt --use-mirrors
-    - if [[ $TRAVIS_PYTHON_VERSION == '2.6' ]]; then pip install --use-mirrors unittest2; fi
+    - if [[ $TRAVIS_PYTHON_VERSION == '2.6' ]]; then pip install --use-mirrors -r dev-requirements-2.txt; fi
+    - if [[ $TRAVIS_PYTHON_VERSION == '3.2' ]]; then pip install --use-mirrors -r dev-requirements-3.txt; fi
+    - pip install -e .
 script:
     - python -m vip.main --version
     - pep8 vip
