--- a/.travis.yml
+++ b/.travis.yml
@@ -3,14 +3,15 @@ python:
     - "2.6"
     - "2.7"
     - "3.2"
+    - "3.3"
 matrix:
     allow_failures:
-        - python: "3.2"
+        - python: "3.3"
 install:
     - pip install -r requirements.txt --use-mirrors
     - pip install -r dev-requirements.txt --use-mirrors
-    - if [[ $TRAVIS_PYTHON_VERSION == '2.6' ]]; then pip install --use-mirrors -r dev-requirements-2.txt; fi
-    - if [[ $TRAVIS_PYTHON_VERSION == '3.2' ]]; then pip install --use-mirrors -r dev-requirements-3.txt; fi
+    - if [[ $TRAVIS_PYTHON_VERSION == 2* ]]; then pip install --use-mirrors -r dev-requirements-2.txt; fi
+    - if [[ $TRAVIS_PYTHON_VERSION == 3* ]]; then pip install --use-mirrors -r dev-requirements-3.txt; fi
     - pip install -e .
 script:
     - python -m vip.main --version
