--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,10 @@ python:
     - "2.7"
     - "3.2"
 install:
+    # TODO(dejw): after closing #10 all installation stuff will shrink to:
+    #- pip install vip --use-mirrors
+    #- vip install
+    #- vip pip install -e .
     - pip install -r requirements.txt --use-mirrors
     - pip install -r dev-requirements.txt --use-mirrors
     - if [[ $TRAVIS_PYTHON_VERSION == 2* ]]; then pip install --use-mirrors -r dev-requirements-2.txt; fi
@@ -11,5 +15,6 @@ install:
     - pip install -e .
 script:
     - python -m vip.main --version
-    - pep8 vip
     - nosetests
+    - pep8 vip
+
